build/ako/sb/yaml/gw-multiple-listeners.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gw-multiple-listeners
spec:
  gatewayClassName: avi-lb
  listeners:
    - name: foo-http
      protocol: HTTP
      port: 80
      hostname: "*.sb.vclass.local"
    - name: bar-https
      protocol: HTTPS
      port: 443
      hostname: "*.sb.vclass.local"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: cert01
