build/ako/sb/yaml/route-v2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-v2
spec:
  parentRefs:
    - name: gw-multiple-listeners
  hostnames:
    - "route-v2.sb.vclass.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v2
          port: 80
