build/ako/sb/yaml/route-v3.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-v3
spec:
  parentRefs:
    - name: gw-multiple-listeners
  hostnames:
    - "route-v3.sb.vclass.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v3
          port: 80
